<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:gravity="start"
                android:text="@string/title" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_name"
                android:inputType="textMultiLine"
                tools:ignore="Autofill" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:gravity="top"
                android:hint="@string/activity_description"
                android:inputType="textMultiLine"
                tools:ignore="Autofill" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="textMultiLine"
                tools:ignore="Autofill" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:gravity="start"
                android:text="@string/faculty" />

            <Spinner
                android:id="@+id/spinnerFaculty"
                android:layout_width="match_parent"
                android:layout_height="48dp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:gravity="start"
                android:text="@string/start_time" />

            <EditText
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/timeFormat"
                android:inputType="datetime"
                tools:ignore="Autofill" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:gravity="start"
                android:text="@string/due" />

            <EditText
                android:id="@+id/due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/timeFormat"
                android:inputType="datetime"
                tools:ignore="Autofill" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:gravity="start"
                android:text="@string/deadline" />

            <EditText
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/timeFormat"
                android:inputType="datetime"
                tools:ignore="Autofill" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:gravity="start"
                android:text="@string/choose_photo" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/days_recorded"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/maxReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_reg"
                android:inputType="number"
                tools:ignore="Autofill" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/buttonPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
